--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,15 +5,20 @@ jobs:
 			- uses: actions/checkout@v2
 			- run: dotnet build
 	test:
+    needs:
+      - build
 	run-on: ubuntu-20.04
 		- uses: actions/checkout@v2
 		- run: dotnet test -p:CollectCoverage=true -p:CoverletOutputFormat=opencover --logger=trx
 	analyze:
+    needs:
+        - build
+        - test
 	run-on: ubuntu-20.04
 		- uses: actions/checkout@v2
 		- run: dotnet tool install -g dotnet-sonarscanner
-		- run: dotnet-sonarscanner begin  .\.sonar\scanner\dotnet-sonarscanner begin -k:"phambao2006_pizzabox_web" -o:"pizzaboxweb" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+		- run: dotnet-sonarscanner begin  dotnet-sonarscanner begin -k:"phambao2006_pizzabox_web" -o:"pizzaboxweb" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
 		- run: dotnet build
-		- run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+		- run: dotnet-sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 name: ci-pipeline
 on: push
