--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,7 +8,7 @@ jobs:
   test:
     needs:
       - build
-    run-on: ubuntu-20.04
+    runs-on: ubuntu-20.04
     steps:
      - uses: actions/checkout@v2
      - run: dotnet test -p:CollectCoverage=true -p:CoverletOutputFormat=opencover --logger=trx
@@ -17,7 +17,7 @@ jobs:
     needs:
         - build
         - test
-    run-on: ubuntu-20.04
+    runs-on: ubuntu-20.04
     steps:
      - uses: actions/checkout@v2
      - run: dotnet tool install -g dotnet-sonarscanner
