--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,6 +17,9 @@ jobs:
     needs:
         - build
         - test
+		env:
+      # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     runs-on: ubuntu-20.04
     steps:
      - uses: actions/checkout@v2
