--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,14 +2,14 @@ jobs:
   analyze:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.ONAR_TOKEN }}
     runs-on: ubuntu-20.04
     steps:
      - uses: actions/checkout@v2
      - run: dotnet tool install -g dotnet-sonarscanner
      - run: dotnet-sonarscanner begin  dotnet-sonarscanner begin -k:"phambao2006_pizzabox_web" -o:"pizzaboxweb" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
      - run: dotnet build
-     - run: dotnet-sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+     - run: dotnet-sonarscanner end -d:sonar.login="${{ secrets.ONAR_TOKEN }}"
 
 name: ci-pipeline
 on: push
