--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: dotnet tool install -g dotnet-sonarscanner
-      - run: dotnet sonarscanner begin -k:'pizzaboxsonar' -o:'pizzabox_web' -d:sonar.login=$SONAR_TOKEN /d:sonar.host.url='https://sonarcloud.io'
+      - run: dotnet sonarscanner begin -k:'pizzaboxsonar' -o:'pizzabox_web' -d:sonar.login=$SONAR_TOKEN /d:sonar.host.url=https://sonarcloud.io
       - run: dotnet build
       - run: dotnet sonarscanner end -d:sonar.login=$SONAR_TOKEN
 
